--- a/inicio.html
+++ b/inicio.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>navbar </title>
+    <link rel="stylesheet" href="/inicio.css">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+BE+VLG&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">AlephArt</a>
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#"><img src="/Logos AlephArt/Logod5e6f7 (1).png" width="35" height="35"></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -32,8 +36,8 @@
           >
           <a class="nav-item nav-link" href="#">Acerca de nosotras</a>
           <a class="nav-item nav-link" href="#">Contacto</a>
-          <a class="nav-item nav-link" href="#">Registro</a>
-          <a class="nav-item nav-link" href="#">Login</a>
+          <a class="nav-item nav-link" href="./registro.html">Registro</a>
+          <a class="nav-item nav-link" href="./login.html">Login</a>
         </div>
       </div>
     </nav>
