se acomodan elementos dela navbar y se cambia el color del menu desplegable

--- a/inicio.html
+++ b/inicio.html
@@ -12,11 +12,11 @@
       crossorigin="anonymous"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+BE+VLG&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-  </head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+BE+VLG&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+         </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="#"><img src="/Logos AlephArt/Logod5e6f7 (1).png" width="35" height="35"></a>
       <button
         class="navbar-toggler"
@@ -25,22 +25,22 @@
         data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup"
         aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#"
-            >Inicio <span class="sr-only">(current)</span></a
-          >
-          <a class="nav-item nav-link" href="#">Acerca de nosotras</a>
-          <a class="nav-item nav-link" href="#">Contacto</a>
-          <a class="nav-item nav-link" href="./registro.html">Registro</a>
-          <a class="nav-item nav-link" href="./login.html">Login</a>
-        </div>
+        aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">
+          Inicio <span class="sr-only">(current)</span>
+        </a>
+        <a class="nav-item nav-link" href="#">Acerca de nosotras</a>
+        <a class="nav-item nav-link" href="#">Contacto</a>
       </div>
-    </nav>
+      <div class="navbar-nav ml-auto">
+        <a class="nav-item nav-link" href="./registro.html">Registro</a>
+        <a class="nav-item nav-link" href="./login.html">Login</a>
+      </div>
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
