--- a/html/perfil.html
+++ b/html/perfil.html
@@ -3,21 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>navbar</title>
-    <link rel="stylesheet" href="../css/perfil.css" />
+    <title>navbar </title>
+    <link rel="stylesheet" href="/inicio.css">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+BE+VLG&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+BE+VLG&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+         </head>
   <body>
     <!--Inicio de Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark">
@@ -44,12 +41,22 @@
           <a class="nav-item nav-link" href="./inicio.html">Inicio</a>
           <a class="nav-item nav-link" href="#">Acerca de nosotras</a>
           <a class="nav-item nav-link" href="#">Contacto</a>
-          <a class="nav-item nav-link" href="./eventos.html">Eventos</a>
-          <a class="nav-item nav-link" href="./publicaciones.html">Publicaciones</a>
+          <!-- Items visible only when logged in -->
+          <div id="loggedInItems" style="display: none;">
+            <a class="nav-item nav-link" href="./eventos.html">Eventos</a>
+            <a class="nav-item nav-link" href="./publicaciones.html">Publicaciones</a>
+          </div>
+        </div>
+        <div class="navbar-nav ml-auto">
+          <!-- Items visible when not logged in -->
+          <div id="loggedOutItems" style="display: flex;">
+            <a class="nav-item nav-link" href="./registro.html">Registro</a>
+            <a class="nav-item nav-link" href="./login.html">Login</a>
+          </div>
         </div>
       </div>
 
-      <div class="navbar-nav ml-auto order-lg-last user-actions">
+      <div class="navbar-nav ml-auto order-lg-last user-actions" id="loggedInIcons" style="display: none;">
         <a class="nav-link" href="./perfil.html" title="Profile">
           <img
             src="../assets/fotografa 1.png"
@@ -63,8 +70,8 @@
           <img src="../assets/íconos/exit-white.png" alt="Logout" width="24" height="24">
         </button>
       </div>
-
     </nav>
+    <!--Fin de Navbar-->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -80,5 +87,6 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+    <script src="./perfil.js"></script>
   </body>
 </html>
