--- a/inicio.html
+++ b/inicio.html
@@ -16,8 +16,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+BE+VLG&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
          </head>
   <body>
+    <!--Inicio de Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark">
-      <a class="navbar-brand" href="#"><img src="/Logos AlephArt/Logod5e6f7 (1).png" width="35" height="35"></a>
+      <a class="navbar-brand" href="#">
+        <img
+          src="../assets/Logos AlephArt/Logod5e6f7 (1).png"
+          width="35"
+          height="35"
+          alt="Logo Aleph Art"
+      /></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -25,22 +32,46 @@
         data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup"
         aria-expanded="false"
-        aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="#">
-          Inicio <span class="sr-only">(current)</span>
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav mr-auto">
+          <a class="nav-item nav-link" href="./inicio.html">Inicio</a>
+          <a class="nav-item nav-link" href="#">Acerca de nosotras</a>
+          <a class="nav-item nav-link" href="#">Contacto</a>
+          <!-- Items visible only when logged in -->
+          <div id="loggedInItems" style="display: flex;">
+            <a class="nav-item nav-link" href="./eventos.html">Eventos</a>
+            <a class="nav-item nav-link" href="./publicaciones.html">Publicaciones</a>
+          </div>
+        </div>
+        <div class="navbar-nav ml-auto">
+          <!-- Items visible when not logged in -->
+          <div id="loggedOutItems" style="display: none;">
+            <a class="nav-item nav-link" href="./registro.html">Registro</a>
+            <a class="nav-item nav-link" href="./login.html">Login</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="navbar-nav ml-auto order-lg-last user-actions" style="display: flex;">
+        <a class="nav-link" href="./perfil.html" title="Profile">
+          <img
+            src="../assets/fotografa 1.png"
+            alt="Profile"
+            class="rounded-circle"
+            width="55"
+            height="55"
+          />
         </a>
-        <a class="nav-item nav-link" href="#">Acerca de nosotras</a>
-        <a class="nav-item nav-link" href="#">Contacto</a>
+        <button class="btn nav-link" title="Logout">
+          <img src="../assets/íconos/exit-white.png" alt="Logout" width="24" height="24">
+        </button>
       </div>
-      <div class="navbar-nav ml-auto">
-        <a class="nav-item nav-link" href="./registro.html">Registro</a>
-        <a class="nav-item nav-link" href="./login.html">Login</a>
-      </div>
-    </div>
+    </nav>
+    <!--Fin de Navbar-->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
