--- a/Navbar/inicio.html
+++ b/Navbar/inicio.html
@@ -60,7 +60,7 @@
       <img src="/img-carousel/banner 1.png" class="d-block w-100" alt="banner 1">
       <div class="carousel-caption">
         <h5 class="conoce">Conoce a...</h5>
-        <div class="container"><!--Implementamos la figura que resalta el texto de este contenedor-->
+        <div class="container-color"><!--Implementamos la figura que resalta el texto de este contenedor-->
           <p class="name-surname">NAME SURNAME</p>
           <p class="profession">Pintora</p>
         </div>
@@ -69,7 +69,7 @@
 
     <div class="carousel-item">
       <img src="/img-carousel/banner 2.png" class="d-block w-100" alt="banner 2">
-      <div class="carousel-caption d-none d-md-block">
+      <div class="carousel-caption d-none d-md-block"> <!--Hasta aqui indica que para el tamaño md va a quitar este div de la pantalla-->
         <h5 class="conoce">Conoce a...</h5>
         <p class="name-surname">NAME SURNAME</p>
         <p class="profession">Escritora</p>
