--- a/html/inicio.html
+++ b/html/inicio.html
@@ -17,7 +17,6 @@
     />
   </head>
   <body>
-    
     <!--Inicio de Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -48,9 +47,7 @@
             <!-- Items que son visibles cuando el usuario inicio sesión -->
             <div id="loggedInItems" style="display: none">
               <a class="nav-item nav-link" href="./eventos.html">Eventos</a>
-              <a class="nav-item nav-link" href="./publicaciones.html"
-                >Publicaciones</a
-              >
+              <a class="nav-item nav-link" href="./publicaciones.html">Publicaciones</a>
             </div>
           </div>
           <div class="navbar-nav ms-auto">
