se arreglo la navbar

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -64,8 +64,7 @@
         <div
           class="navbar-nav ms-auto order-lg-last user-actions"
           id="loggedInIcons"
-          style="display: none"
-        >
+          style="display: none">
           <a class="nav-link" href="./perfil.html" title="Profile">
             <img
               src="../assets/fotografa 1.png"
