--- a/html/inicio.html
+++ b/html/inicio.html
@@ -25,8 +25,7 @@
             src="../assets/Logos AlephArt/Logod5e6f7 (1).png"
             width="35"
             height="35"
-            alt="Logo Aleph Art"
-          />
+            alt="Logo Aleph Art"/>
         </a>
         <button
           class="navbar-toggler"
