cambios de la navbar

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -25,7 +25,8 @@
             src="../assets/Logos AlephArt/Logod5e6f7 (1).png"
             width="35"
             height="35"
-            alt="Logo Aleph Art"/>
+            alt="Logo Aleph Art"
+          />
         </a>
         <button
           class="navbar-toggler"
@@ -46,11 +47,13 @@
             <!-- Items que son visibles cuando el usuario inicio sesión -->
             <div id="loggedInItems" style="display: none">
               <a class="nav-item nav-link" href="./eventos.html">Eventos</a>
-              <a class="nav-item nav-link" href="./publicaciones.html">Publicaciones</a>
+              <a class="nav-item nav-link" href="./publicaciones.html"
+                >Publicaciones</a
+              >
             </div>
           </div>
           <div class="navbar-nav ms-auto">
-           <!-- Items que son visible cuando NO ha iniciado sesión-->
+            <!-- Items que son visible cuando NO ha iniciado sesión-->
             <div id="loggedOutItems">
               <a class="nav-item nav-link active" href="./registro.html"
                 >Registro</a
@@ -63,7 +66,8 @@
         <div
           class="navbar-nav ms-auto order-lg-last user-actions"
           id="loggedInIcons"
-          style="display: none">
+          style="display: none"
+        >
           <a class="nav-link" href="./perfil.html" title="Profile">
             <img
               src="../assets/fotografa 1.png"
@@ -87,63 +91,102 @@
     <!--Fin de Navbar-->
 
     <!--Inicio de Cards-->
-    <br><br><br><br><br><br>
+    <br /><br /><br /><br /><br /><br />
 
     <div class="cards-container">
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col">
           <div class="card">
-            <img src="/assets/cardsFotos/escritora.jpg" class="card-img-top" alt="...">
+            <img
+              src="/assets/cardsFotos/escritora.jpg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h6 class="card-subtitle mb-2 text-body-secondary">
+                Card subtitle
+              </h6>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="/assets/cardsFotos/escultura.jpg" class="card-img-top" alt="...">
+            <img
+              src="/assets/cardsFotos/escultura.jpg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h6 class="card-subtitle mb-2 text-body-secondary">
+                Card subtitle
+              </h6>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="/assets/cardsFotos/musico.jpg" class="card-img-top" alt="...">
+            <img
+              src="/assets/cardsFotos/musico.jpg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <h6 class="card-subtitle mb-2 text-body-secondary">
+                Card subtitle
+              </h6>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content.
+              </p>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="/assets/cardsFotos/pintora.jpg" class="card-img-top" alt="...">
+            <img
+              src="/assets/cardsFotos/pintora.jpg"
+              class="card-img-top"
+              alt="..."
+            />
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h6 class="card-subtitle mb-2 text-body-secondary">
+                Card subtitle
+              </h6>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
             </div>
           </div>
         </div>
       </div>
-    </div> 
+    </div>
     <!--Fin de Cards-->
 
     <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-    crossorigin="anonymous"
-  ></script>
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
