--- a/html/inicio.html
+++ b/html/inicio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/inicio.css" />
+    <link rel="stylesheet" href="/AlephArtDam/css/inicio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -95,7 +95,25 @@
         <div class="col">
           <div class="card">
             <img
-              src="/assets/cardsFotos/escritora.jpg"
+              src="/AlephArtDam/assets/cardsFotos/escritora.jpg"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Luisa Pérez</h5>
+              <h6 class="card-subtitle mb-2 text-body-secondary">
+                Escritora
+              </h6>
+              <p class="card-text">
+                #modernismo #cuentos
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img
+              src="/AlephArtDam/assets/cardsFotos/escultura.jpg"
               class="card-img-top"
               alt="..."
             />
@@ -115,27 +133,7 @@
         <div class="col">
           <div class="card">
             <img
-              src="/assets/cardsFotos/escultura.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <h6 class="card-subtitle mb-2 text-body-secondary">
-                Card subtitle
-              </h6>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img
-              src="/assets/cardsFotos/musico.jpg"
+              src="/AlephArtDam/assets/cardsFotos/musico.jpg"
               class="card-img-top"
               alt="..."
             /> 
@@ -154,7 +152,7 @@
         <div class="col">
           <div class="card">
             <img
-              src="/assets/cardsFotos/pintora.jpg"
+              src="/AlephArtDam/assets/cardsFotos/pintora.jpg"
               class="card-img-top"
               alt="..."
             />
