agrego descripción y modifico css para font-family/weight/color

--- a/html/inicio.html
+++ b/html/inicio.html
@@ -118,14 +118,12 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Pedro Hernández</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">
-                Card subtitle
+                Escultor
               </h6>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                #modelado #pulido
               </p>
             </div>
           </div>
@@ -138,13 +136,12 @@
               alt="..."
             /> 
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Carlos López</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">
-                Card subtitle
+                Músico
               </h6>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content.
+                #rock #jazz #blues
               </p>
             </div>
           </div>
@@ -157,14 +154,12 @@
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Camila Vargas</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">
-                Card subtitle
+                Pintora
               </h6>
               <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                #vanguardista
               </p>
             </div>
           </div>
