--- a/html/inicio.html
+++ b/html/inicio.html
@@ -6,12 +6,20 @@
     <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/AlephArtDam/css/inicio.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+BE+VLG&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
+
+     <!--?Font-Google-->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ 
+     <!--?Font-Lato--> 
+     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+ 
+     <!--?Font-Taviraj--> 
+     <link href="https://fonts.googleapis.com/css2?family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+ 
+     <!--?Font-Poppins-->
+     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Taviraj:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+   
   </head>
   <body>
     <!--Inicio de Navbar-->
@@ -91,15 +99,16 @@
     <br /><br /><br /><br /><br /><br />
 
     <div class="cards-container">
-      <div class="row row-cols-1 row-cols-md-4 g-4">
+      <!-- <div class="row row-cols-1 row-cols-md-4 g-3"> -->
+      <div class="row row-cols-12 row-cols-md-6 row-cols-lg-4">  
         <div class="col">
-          <div class="card">
+          <div class="card-artist d-flex flex-column">
             <img
               src="/AlephArtDam/assets/cardsFotos/escritora.jpg"
               class="card-img-top"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body flex-fill d-flex flex-column">
               <h5 class="card-title">Luisa Pérez</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">
                 Escritora
@@ -111,13 +120,13 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card-artist d-flex flex-column">
             <img
               src="/AlephArtDam/assets/cardsFotos/escultura.jpg"
               class="card-img-top"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body flex-fill d-flex flex-column">
               <h5 class="card-title">Pedro Hernández</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">
                 Escultor
@@ -129,13 +138,13 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card-artist d-flex flex-column">
             <img
               src="/AlephArtDam/assets/cardsFotos/musico.jpg"
               class="card-img-top"
               alt="..."
             /> 
-            <div class="card-body">
+            <div class="card-body flex-fill d-flex flex-column">
               <h5 class="card-title">Carlos López</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">
                 Músico
@@ -147,13 +156,13 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card-artist d-flex flex-column">
             <img
               src="/AlephArtDam/assets/cardsFotos/pintora.jpg"
               class="card-img-top"
               alt="..."
             />
-            <div class="card-body">
+            <div class="card-body flex-fill d-flex flex-column">
               <h5 class="card-title">Camila Vargas</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary">
                 Pintora
@@ -167,6 +176,20 @@
       </div>
     </div>
     <!--Fin de Cards-->
+
+    <!--Inicio de botón "Conoce más"-->
+    <br><br><br>
+    <div class="div-button">
+      <button type="submit" class="btn btn-danger btn-enviar">Conoce más</button>
+    </div>
+    <!--Fin de botón "Conoce más"-->
+
+    <!--Inicio footer-->
+    <br><br><br>
+    <footer> <p><small>© 2024 AlephArt</small></p>
+        <br>
+    </footer>
+    <!--Fin footer-->
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
