--- a/Form-Events/formularioBase.html
+++ b/Form-Events/formularioBase.html
@@ -32,7 +32,7 @@
  
              <div class="contEvent" id="box">   
             
-                <form id="formularioContacto">
+                <form id="formularioEvento">
                    <br>
                    <h1 class="titulo ">Crear Evento</h1>
                    <div class="col">
@@ -99,7 +99,7 @@
 
                         <div class="col-md-3">
                           <label for="inputcategory" class="form-label"></label>
-                          <select id="inputcategory" class="form-select" >
+                          <select id="inputCategory" class="form-select" >
                              <option selected>Categoría</option>
                              <option>Arte Urbano</option>
                              <option>tecnologías</option>
@@ -155,9 +155,9 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-<!--<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script type="text/javascript">emailjs.init('Eivo698efOjc7hKRe')</script>
-<script src="contacto.js"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!--script de notificaciones de alerta -->
+<script type="text/javascript">emailjs.init('Eivo698efOjc7hKRe')</script> 
+<script src="formularioBase.js"></script>
 </body>
 
 
