--- a/Form-Events/formularioBase.html
+++ b/Form-Events/formularioBase.html
@@ -155,7 +155,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!--script de notificaciones de alerta -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!--script de notificaciones de alerta - link: https://sweetalert2.github.io/ -->
 <script type="text/javascript">emailjs.init('Eivo698efOjc7hKRe')</script> 
 <script src="formularioBase.js"></script>
 </body>
