--- a/Inicio/html/eventos.html
+++ b/Inicio/html/eventos.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/AlephArtKarla/Inicio/css/navbar.css"/>
     <link rel="icon" href="../assets/logosAlephArt/Logod5e6f7 (1).png" type="image/png">
+     
+    <link rel="stylesheet" href="../css/eventos.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -107,7 +109,7 @@
                   <button type="button" class="btn btn-secondary mb-2" id="b2">Próximo mes</button>
               </div>
               <div class="btn-group-vertical w-100" role="group" aria-label="Vertical button group" id="div2">
-                  <h4 class="mt-4" style="color:#D5ADFB">Categorías</h4>
+                  <h4 class="mt-4" style= "color: #D5ADFB;">Categorías</h4>
                   <button type="button" class="btn btn-secondary mb-2" id="b3">Arte Urbano</button>
                   <button type="button" class="btn btn-secondary mb-2" id="b4">Tecnología</button>
                   <button type="button" class="btn btn-secondary mb-2" id="b5">Música</button>
@@ -120,7 +122,7 @@
               <div class="row">
                   <!-- Large container (Encabezado)-->
                   <div class="col-md-12 main-content mb-4">
-                      <h1 style="color:#050831;">¡Conoce Artistas y Eventos especialmente para ti!</h1>
+                      <h1 style="color:#050831;">¡Conoce artistas y eventos especialmente para ti!</h1>
                       <h2 style="color: #D5ADFB;">Conoce un evento lleno de creatividad cerca de ti</h2>
                   </div>
               </div>
