--- a/Página/html/eventos.html
+++ b/Página/html/eventos.html
@@ -99,6 +99,7 @@
     </footer>
 
     <script src="../js/eventos.js"></script>
+    <script src="/js/formularioBase3.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
