Actualizacion de rutas de imágenes

--- a/Eventos1/html/eventos.html
+++ b/Eventos1/html/eventos.html
@@ -86,7 +86,9 @@
         <div class="row">
             <!-- Sidebar -->
             <div class="col-md-2 sidebar" id="btn2">
+              <a href="../html/formulariobase.html">
                 <button type="button" class="btn btn-primary mb-3 w-100" id="button1">Crea un Nuevo Evento</button>
+              </a>  
                 <div class="btn-group-vertical w-100" role="group" aria-label="Vertical button group" id="div1">
                     <button type="button" class="btn btn-secondary mb-2" id="b1">Este mes</button>
                     <button type="button" class="btn btn-secondary mb-2" id="b2">Próximo mes</button>
