--- a/public/Registro/registro.html
+++ b/public/Registro/registro.html
@@ -8,12 +8,85 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="icon" href="../assets/logosAlephArt/Logod5e6f7 (1).png" type="image/png">
     <link rel="stylesheet" href="registro.css">
+    <link rel="stylesheet" href="/public/Navbar/navbar.css">
     <!--Font-Google-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Taviraj:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+        <!--Inicio de Navbar-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img
+                  src="/public/assets/logosAlephArt/Logod5e6f7 (1).png"
+                  width="35"
+                  height="35"
+                  alt="Logo Aleph Art"
+                />
+              </a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav me-auto">
+                  <a class="nav-item nav-link" href="/public/pantallaPrincipal.html">Inicio</a>
+                  <a class="nav-item nav-link" href="/public/Acerca/Acerca-de-nosotras.html">Acerca de nosotras</a>
+                  <a class="nav-item nav-link" href="public/Contacto/contacto.html">Contacto</a>
+                  <!-- Items que son visibles cuando el usuario inicio sesión -->
+                  <div id="loggedInItems" style="display: none">
+                    <a class="nav-item nav-link" href="Eventos/html/eventos.html">Eventos</a>
+                    <a class="nav-item nav-link" href="Publicaciones/Principal/principal.html"
+                      >Publicaciones</a
+                    >
+                  </div>
+                </div>
+                <div class="navbar-nav ms-auto">
+                  <!-- Items que son visible cuando NO ha iniciado sesión-->
+                  <div id="loggedOutItems">
+                    <a class="nav-item nav-link active" href="/public/Registro/registro.html"
+                      >Registro</a
+                    >
+                    <a class="nav-item nav-link" href="/public/html/login.html">Login</a>
+                  </div>
+                </div>
+              </div>
+              <!-- Foto de perfil y botón de cerrar sesión -->
+              <div
+                class="navbar-nav ms-auto order-lg-last user-actions"
+                id="loggedInIcons"
+                style="display: none"
+              >
+                <a class="nav-link" href="./perfil.html" title="Profile">
+                  <img
+                    src="assets/fotografa 1-perfil.png"
+                    alt="Profile"
+                    class="rounded-circle"
+                    width="55"
+                    height="55"
+                  />
+                </a>
+                <button class="btn nav-link" title="Logout" id="exit-button">
+                  <img
+                    src="assets/iconos/exit-white.png"
+                    alt="Logout"
+                    width="30"
+                    height="30"
+                  />
+                </button>
+              </div>
+            </div>
+          </nav>
+          <!--Fin de Navbar-->
     <br>
     <br>
     <div class="container">
@@ -42,15 +115,9 @@
                         <span id="emailError" class="error-message text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label for="perfil" class="labels">Selecciona tu perfil</label>
-                        <select class="form-control form-group" id="perfil" name="perfil">
-                            <option hidden selected>--</option>
-                            <option>Artista</option>
-                            <option>Amante del arte</option>
-                            <option>Institución educativa</option>
-                            <option>Institución cultural</option>
-                        </select>
-                        <span id="perfilError" class="error-message text-danger"></span>
+                        <label for="telefono" class="labels">Teléfono</label>
+                      <input type="tel" class="form-control" id="telefono" name="telefono" placeholder="Ingresa tu teléfono" autocomplete="tel" maxlength="10" inputmode="numeric" oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+                      <span id="telefonoError" class="error-message text-danger"></span>
                     </div>
                     <div class="form-group">
                         <label for="contraseña" class="labels">Contraseña</label>
