Se agrego boton agregar imagen, realizando cambios en Html y CSS

--- a/public/Eventos/html/formulariobase.html
+++ b/public/Eventos/html/formulariobase.html
@@ -99,9 +99,9 @@
 
                    <br>
                    <h1 class="titulo ">Crear Evento</h1>
-                   <div class="col">
-                   <img src="../resourses/audience-1867754_1280.jpg" class="img-fluid" id="portada">
-                   
+                   <div class="containerI">
+                   <img src="../resourses/audience-1867754_1280.jpg" alt="img-form-crete-events" class="img-fluid" id="portada">
+                   <button type="button" class="btnIm">Agregar imagen</button>
                   </div>
                    <br>  <br> 
                     
