--- a/public/Eventos/html/formularioEditar.html
+++ b/public/Eventos/html/formularioEditar.html
@@ -97,8 +97,9 @@
                 <form id="formularioEvento">
                     <br>
                     <h1 class="titulo">Editar Evento</h1>
-                    <div class="col">
-                        <img src="../resourses/audience-1867754_1280.jpg" class="img-fluid" id="portada">
+                    <div class="containerI">
+                        <img src="../resourses/audience-1867754_1280.jpg" alt="img-form-crete-events" class="img-fluid" id="portada">
+                        <button type="button" class="btnIm">Agregar imagen</button>
                     </div>
                     <br><br>
                     
