--- a/public/pantallaPrincipal.html
+++ b/public/pantallaPrincipal.html
@@ -25,21 +25,91 @@
   <body>
     <!--Inicio de Navbar-->
     <div id="navbar"></div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../pantallaPrincipal.html">
+          <img 
+            src="../assets/logosAlephArt/Logod5e6f7 (1).png"
+            width="35"
+            height="35"
+            alt="Logo Aleph Art"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav me-auto">
+            <a class="nav-item nav-link" href="../pantallaPrincipal.html">Inicio</a>
+            <a class="nav-item nav-link" href="../Acerca/Acerca-de-nosotras.html">Acerca de nosotras</a>
+            <a class="nav-item nav-link" href="../Contacto/contacto.html">Contacto</a>
+            <!-- Items que son visibles cuando el usuario inicio sesión -->
+            <div id="loggedInItems" style="display: none">
+              <a class="nav-item nav-link" href="../Eventos/html/eventos.html">Eventos</a>
+              <a class="nav-item nav-link" href="/public/Publicaciones/Principal/principal.html"
+                >Publicaciones</a
+              >
+            </div>
+          </div>
+          <div class="navbar-nav ms-auto">
+           <!-- Items que son visible cuando NO ha iniciado sesión-->
+            <div id="loggedOutItems">
+              <a class="nav-item nav-link active" href="../Registro/registro.html"
+                >Registro</a
+              >
+              <a class="nav-item nav-link" href="../Login/login.html">Login</a>
+            </div>
+          </div>
+        </div>
+        <!-- Foto de perfil y botón de cerrar sesión -->
+        <div
+          class="navbar-nav ms-auto order-lg-last user-actions"
+          id="loggedInIcons"
+          style="display: none"
+        >
+          <a class="nav-link" href="/public/html/perfil.html" title="Profile">
+            <img
+              src="/public/assets/fotografa 1-perfil.png"
+              alt="Foto de perfil"
+              class="rounded-circle"
+              width="55"
+              height="55"
+            />
+          </a>
+          <button class="btn nav-link" title="Logout" id="exit-button">
+            <img
+              src="/public/assets/iconos/exit-white.png"
+              alt="Cerrar sesión"
+              width="30"
+              height="30"
+            />
+          </button>
+        </div>
+      </div>
+    </nav>
   <script>
-    // Función para cargar la navbar
-    function loadNavbar() {
-      fetch('http://localhost:8080/navbar')
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById('navbar').innerHTML = data;
-        })
-        .catch(error => {
-          console.error('Error al cargar la navbar:', error);
-        });
-    }
+    // // Función para cargar la navbar
+    // function loadNavbar() {
+    //   fetch('http://localhost:8080/navbar')
+    //     .then(response => response.text())
+    //     .then(data => {
+    //       document.getElementById('navbar').innerHTML = data;
+    //     })
+    //     .catch(error => {
+    //       console.error('Error al cargar la navbar:', error);
+    //     });
+    // }
 
-    // Cargar la navbar cuando se cargue el documento
-    document.addEventListener('DOMContentLoaded', loadNavbar);
+    // // Cargar la navbar cuando se cargue el documento
+    // document.addEventListener('DOMContentLoaded', loadNavbar);
   </script>
 
     <!--Fin de Navbar-->
@@ -48,7 +118,7 @@
 <div id="carouselExampleCaptions" class="carousel slide">
   <div class="carousel-inner">
 <div class="carousel-item active">
-  <img src="assets/img-carousel/banner 1.png" class="d-block w-100" alt="banner-1">
+  <img src="assets/img-carousel/banner 1.png" class="d-block w-100" alt="Foto Aurora Valdés -Pintora">
   <div class="carousel-caption">
     <h5 class="conoce">Conoce a...</h5>
     <div class="container-color">
@@ -58,7 +128,7 @@
   </div>
 </div>
 <div class="carousel-item">
-  <img src="assets/img-carousel/banner 2.png" class="d-block w-100" alt="banner-2">
+  <img src="assets/img-carousel/banner 2.png" class="d-block w-100" alt="Foto Celeste Morales-Escritora">
   <div class="carousel-caption">
     <h5 class="conoce">Conoce a...</h5>
     <div class="container-color">
@@ -68,7 +138,7 @@
   </div>
 </div>
 <div class="carousel-item">
-  <img src="assets/img-carousel/banner 3.png" class="d-block w-100" alt="banner-3">
+  <img src="assets/img-carousel/banner 3.png" class="d-block w-100" alt="Foto Valeria Estévez - Actriz">
   <div class="carousel-caption">
     <h5 class="conoce">Conoce a...</h5>
     <div class="container-color">
@@ -101,7 +171,7 @@
            <img
              src="assets/cardsFotos/escritora.jpg"
              class="card-img-top"
-             alt="..."
+             alt="Foto Luisa Perez-Escritora"
            />
            <div class="card-body">
              <h5 class="card-title">Luisa Pérez</h5>
@@ -119,7 +189,7 @@
            <img
              src="assets/cardsFotos/escultura.jpg"
              class="card-img-top"
-             alt="..."
+             alt="Foto Pedro Hernández-Escultor"
            />
            <div class="card-body">
              <h5 class="card-title">Pedro Hernández</h5>
@@ -137,7 +207,7 @@
            <img
              src="assets/cardsFotos/musico.jpg"
              class="card-img-top"
-             alt="..."
+             alt="Foto Carlos López-Músico"
            /> 
            <div class="card-body">
              <h5 class="card-title">Carlos López</h5>
@@ -155,7 +225,7 @@
            <img
              src="assets/cardsFotos/pintora.jpg"
              class="card-img-top"
-             alt="..."
+             alt="Foto Camila Vargas -Pintora"
            />
            <div class="card-body">
              <h5 class="card-title">Camila Vargas</h5>
@@ -174,7 +244,7 @@
 
    <!--Botón conoce más-->
    <div class="button-container">
-    <form action="#">
+    <form action="Acerca/Acerca-de-nosotras.html">
       <button type="submit" id="btn-conoce">Conoce más</button>
   </form>
    </div>
