Se agrego la funcionalidad de agregar imagen al botón del formulario de eventos, se invirtio el orden de aparicion en categories-events, para que se muestre en las cards la imagen agregada.

--- a/public/Eventos/html/formularioEditar.html
+++ b/public/Eventos/html/formularioEditar.html
@@ -99,7 +99,8 @@
                     <h1 class="titulo">Editar Evento</h1>
                     <div class="containerI">
                         <img src="../assets/audience-1867754_1280.jpg" alt="img-form-crete-events" class="img-fluid" id="portada">
-                        <button type="button" class="btnIm">Agregar imagen</button>
+                        <button type="button" id="addImgEvents" class="btnIm">Agregar imagen</button>
+                        <input  type="file" id="inputImg" multiple style="display: none;">
                     </div>
                     <br><br>
                     
