--- a/public/Eventos/html/formulariobase.html
+++ b/public/Eventos/html/formulariobase.html
@@ -101,7 +101,8 @@
                    <h1 class="titulo ">Crear Evento</h1>
                    <div class="containerI">
                    <img src="../resourses/audience-1867754_1280.jpg" alt="img-form-crete-events" class="img-fluid" id="portada">
-                   <button type="button" class="btnIm">Agregar imagen</button>
+                   <button type="button" id="addImgEvents" class="btnIm">Agregar imagen</button>
+                   <input  type="file" id="inputImg"  style="display: none;">
                   </div>
                    <br>  <br> 
                     
