se agregó responsividad a la parte superior del perfil y se retiró la parte de contáctame

--- a/public/Perfil/perfil.html
+++ b/public/Perfil/perfil.html
@@ -85,7 +85,7 @@ Profesión</textarea
         <input
           type="file"
           id="fileInputBanner"
-          accept="image/*"
+          accept="image/*"–
           style="display: none"
         />
         <img
@@ -96,8 +96,8 @@ Profesión</textarea
         />
       </div>
       <div id="presentacion-del-artista">
-        <div class="row" id="div-presentacion-artista">
-          <div class="col-5" id="div-imagenPerfil">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2" id="div-presentacion-artista">
+          <div id="div-imagenPerfil">
             <i
               class="fi fi-rr-pen-field botonEditar"
               id="boton-editar-foto-perfil"
@@ -115,7 +115,7 @@ Profesión</textarea
               id="imagenDePerfil"
             />
           </div>
-          <div class="col-7">
+          <div>
             <div class="row" id="div-sobreMiTitulo">
               <h1>Sobre mí:</h1>
             </div>
@@ -144,20 +144,14 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores consequatur se
                 Guardar Cambios
               </button>
             </div>
-            <div class="row" id="div-ContactMe">
-              <hr />
-              <h5>Contáctame</h5>
-              <br /><br />
-            </div>
           </div>
         </div>
       </div>
-
       <div id="div-titulo-portafolio">
         <h2>Portafolio</h2>
       </div>
-      <div class="row" id="proyecto-reciente">
-        <div class="col-6">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2" id="proyecto-reciente">
+        <div >
           <div id="div-img-proyecto-reciente">
             <i
               class="fi fi-rr-pen-field botonEditar"
@@ -177,7 +171,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores consequatur se
             />
           </div>
         </div>
-        <div class="col-6" id="div-titulo-reciente-proyecto">
+        <div id="div-titulo-reciente-proyecto">
           <h4>Mi más reciente proyecto:</h4>
           <i
             class="fi fi-rr-pen-field botonEditar"
