--- a/public/Perfil/perfil.html
+++ b/public/Perfil/perfil.html
@@ -121,9 +121,7 @@ Profesión</textarea
             </div>
             <div class="row" id="div-sobreMiTexto">
               <p id="text-sobreMi-visible">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Dolores consequatur sed aliquam laborum incidunt? Facere aperiam
-                laudantium earum rerum...
+                Da click en el botón de configuración para modificar este apartado. Comparte con las y los demás artistas de la comunidad, quién eres y qué te gusta crear. Nos interesa mucho conocerte.
               </p>
               <i
                 class="fi fi-rr-pen-field botonEditar"
@@ -198,9 +196,7 @@ Nombre del proyecto</textarea
             id="boton-editar-proyecto-reciente"
           ></i>
           <p id="text-proyectoReciente-visible">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-            consequatur sed aliquam laborum incidunt? Facere aperiam laudantium
-            earum rerum...
+            Da click en el botón de configuración para modificar este apartado. Comparte con nosotros información sobre tu más reciente proyecto, cómo lo creaste, en qué te inspiraste y si colaboraste con demás artistas de la comunidad.              >
           </p>
           <textarea
             id="textarea-proyectoReciente"
