se arregló la imagen de portafolio

--- a/public/Perfil/perfil.html
+++ b/public/Perfil/perfil.html
@@ -57,7 +57,7 @@
     >
       <div id="div-imagen-banner">
         <div id="backgroundName">
-          <p id="nombreArtista">Nombre Apellido</p>
+          <p id="nombreArtista">Lisa Brown </p>
           <p id="text-profesion-visible">
             <i
               class="fi fi-rr-pen-field botonEditar"
@@ -165,7 +165,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores consequatur se
               src="assets/recienteProyecto.jpeg"
               class="img-fluid"
               alt="imagen de mi más reciente proyecto"
-              id="bproyecto-reciente"
+              id="imagen-proyecto-reciente"
             />
           </div>
         </div>
