--- a/public/Perfil/perfil.html
+++ b/public/Perfil/perfil.html
@@ -271,7 +271,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores consequatur se
 
     <footer id="footer"></footer>
 
-    <!--Para central el modal cuando se abre la imagen-->
+    <!--Para centrar el modal cuando se abre la imagen-->
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const imagePreviewModal = document.getElementById("modalContainer");
