Corrección de detalles en la pagina de eventos

--- a/public/Eventos/html/eventos.html
+++ b/public/Eventos/html/eventos.html
@@ -66,7 +66,7 @@
             <div class="col-md-10">
                 <div class="row">
                     <!-- Large container (Encabezado)-->
-                    <div class="col-md-12 main-content mb-4">
+                    <div class="col-md-12 main-content mb-4" id="index">
                         <h1 style="color:#050831;">¡Conoce artistas y eventos especialmente para ti!</h1>
                         <h2 style="color: #D5ADFB;">Asiste a eventos llenos de creatividad cerca de ti</h2>
                     </div>
@@ -76,8 +76,6 @@
          
             <div id="eventContainer" class="row p-3 h-100" style="flex-grow: 3;">
                 <!--Aquí se generan de manera dinámica las cards de eventos creados.-->
-                <img id="no-events-image" src="/public/assets/no-events-image.png" alt="No hay eventos disponibles" style="width: 100%; max-width: 800px; margin: auto;"/>
-                <!--Imagen para cuando no hay eventos que mostrar-->
             </div>
       </div>                 
       </div>      
@@ -101,7 +99,7 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
-    <!--<script src="../js/eventos.js" defer></script>-->
+
     <script src="../js/formularioBase3.js" defer></script>
     <script src="../js/categories-events.js"></script> <!--Se añade script para categoria de eventos-->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
