--- a/public/Eventos/html/formularioEditar.html
+++ b/public/Eventos/html/formularioEditar.html
@@ -164,7 +164,7 @@
 
                     <div class="div-button">
                         <button type="submit" class="btn btn-danger" id="btn-enviar">Guardar Cambios</button>
-                        <a href="./eventos.html" class="btn btn-secondary ms-2 mt-5">Cancelar</a>
+                        <a href="./eventos.html" class="btn btn-secondary ms-2 mt-5" id="btn-cancelar">Cancelar</a>
                     </div>
                     <br><br><br><br>
                 </form>
