--- a/public/Navbar/navbarAuth.html
+++ b/public/Navbar/navbarAuth.html
@@ -83,14 +83,14 @@
               height="55"
             />
           </a>
-          <button class="btn nav-link" title="Logout" id="exit-button">
+          <a href="/pantallaPrincipal.html "="btn nav-link" title="Logout" id="exit-button">
             <img
               src="/assets/iconos/exit-white.png"
               alt="Logout"
               width="30"
               height="30"
             />
-          </button>
+          </a>
         </div>
       </div>
     </nav>
